add back dragended

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             .call(d3.drag()
                     .on("start", dragstarted)
                     .on("drag", dragged)
-                    //.on("end", dragended)
+                    .on("end", dragended)
             );
 
         node.append("circle")
