--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
         d.fy = d.y;
     }
 
-    function dragged(d) {
-        d.fx = d3.event.x;
-        d.fy = d3.event.y;
-    }
+//    function dragged(d) {
+//        d.fx = d3.event.x;
+//        d.fy = d3.event.y;
+//    }
 
 //    function dragended(d) {
 //        if (!d3.event.active) simulation.alphaTarget(0);
