--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             .append("g")
             .attr("class", "node")
             .call(d3.drag()
-                    .on("start", dragstarted)
-                    .on("drag", dragged)
+                    //.on("start", dragstarted)
+                    //.on("drag", dragged)
                     //.on("end", dragended)
             );
 
