--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             .append("g")
             .attr("class", "node")
             .call(d3.drag()
-                    //.on("start", dragstarted)
-                    //.on("drag", dragged)
+                    .on("start", dragstarted)
+                    .on("drag", dragged)
                     //.on("end", dragended)
             );
 
@@ -155,10 +155,10 @@
         d.fy = d.y;
     }
 
-//    function dragged(d) {
-//        d.fx = d3.event.x;
-//        d.fy = d3.event.y;
-//    }
+    function dragged(d) {
+        d.fx = d3.event.x;
+        d.fy = d3.event.y;
+    }
 
 //    function dragended(d) {
 //        if (!d3.event.active) simulation.alphaTarget(0);
