--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     var simulation = d3.forceSimulation()
         .force("link", d3.forceLink().id(function (d) {return d.id;}).distance(200).strength(1))
-        .force("charge", d3.forceManyBody().strength(-400))
-        .force("center", d3.forceCenter(width / 2, height / 2));
+        .force("charge", d3.forceManyBody().strength(-400));
+        //.force("center", d3.forceCenter(width / 2, height / 2));
 
     d3.json("graph.json", function (error, graph) {
         if (error) throw error;
